# VaEngine

./: .gitattributes  .gitignore  CLAUDE.md  README.md
VaEngine/: CMakeLists.txt  CMakePresets.json  VaEngine.slnx
VaEngine/Agent/AgentLog/: 2026-05-03_Log.md
VaEngine/Application/: Application.cpp  Application.vcxproj  Application.vcxproj.filters  CMakeLists.txt  framework.h
VaEngine/Application/Core/Private/Camera/: FreeCamera.cpp
VaEngine/Application/Core/Private/Light/: LightManager.cpp
VaEngine/Application/Core/Public/Camera/: FreeCamera.h
VaEngine/Application/Core/Public/Light/: LightManager.h
VaEngine/Application/Core/Public/Utilities/: Time.h
VaEngine/Application/Private/: Execute.cpp
VaEngine/Application/Public/: Execute.h
VaEngine/Application/Public/Interfaces/: IExecute.h
VaEngine/Application/Source/Private/: Execute.cpp  VaProgramName.cpp
VaEngine/Application/Source/Private/GameManager/: CameraManager.cpp
VaEngine/Application/Source/Private/WorldObjects/: WO_Cube.cpp  WO_Kachujin.cpp  WO_Tower.cpp
VaEngine/Application/Source/Public/: Execute.h  VaProgramName.h
VaEngine/Application/Source/Public/GameManager/: CameraManager.h
VaEngine/Application/Source/Public/WorldObjects/: WO_Cube.h  WO_Kachujin.h  WO_Tower.h
VaEngine/Engine/: CMakeLists.txt  Engine.cpp  Engine.vcxproj  framework.h
VaEngine/Engine/Private/: Execute.cpp  Execute.h
VaEngine/Engine/Private/Animation/: AnimController.cpp
VaEngine/Engine/Private/Asset/: ClipLoader.cpp  MeshLoader.cpp  SkmLoader.cpp
VaEngine/Engine/Private/Demo/: HelloCompute.cpp
VaEngine/Engine/Private/Math/: Container.cpp  Viewport.cpp
VaEngine/Engine/Private/Mesh/: Cube.cpp  CubeShape.cpp  IcoSphereShape.cpp  MeshPrimitive.cpp  SkinnedMesh.cpp  UVSphereShape.cpp
VaEngine/Engine/Private/Object/: Skeleton.cpp  WorldAnimatedModel.cpp  WorldModel.cpp
VaEngine/Engine/Private/RHI/: RHILoader.cpp
VaEngine/Engine/Private/RHI/DirectX/: CommandAlloc_DirectX.cpp  CommandAlloc_DirectX.h  CommandList_DirectX.cpp  CommandList_DirectX.h  CommandQueue_DirectX.cpp  CommandQueue_DirectX.h  Common_DirectX.h  DepthBuffer_DirectX.cpp  DepthBuffer_DirectX.h  Fence_DirectX.cpp  Fence_DirectX.h  RenderDevice_DirectX.cpp  RenderDevice_DirectX.h  ResourceView_DirectX.cpp  ResourceView_DirectX.h  SwapChain_DirectX.cpp  SwapChain_DirectX.h
VaEngine/Engine/Private/RHI/Vulkan/: Buffer_Vulkan.cpp  Buffer_Vulkan.h  CommandQueue_Vulkan.cpp  CommandQueue_Vulkan.h  Common_Vulkan.h  Fence_Vulkan.cpp  Fence_Vulkan.h  Pipeline_Vulkan.cpp  Pipeline_Vulkan.h  RenderDevice_Vulkan.cpp  RenderDevice_Vulkan.h  SwapChain_Vulkan.cpp  SwapChain_Vulkan.h
VaEngine/Engine/Private/Render/: AnimationRenderer.cpp  AnimationRenderer.h  AnimationRenderercpp.txt  AnimationRendererh.txt  DebugLineRenderer.cpp  DebugLineRenderer.h  DebugTextRenderer.cpp  DebugTextRenderer.h  DeferredLightingRenderer.cpp  DeferredLightingRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  ForwardRenderercpp.txt  ForwardRendererh.txt  GBufferRenderer.cpp  GBufferRenderer.h  Light.cpp  Light.h  Material.h  RenderGraph.cpp  RenderGraphcpp.txt  SceneRenderer.cpp  SceneRenderer.h
VaEngine/Engine/Private/Scene/: BaseCamera.cpp
VaEngine/Engine/Private/System/: InputSystem.cpp
VaEngine/Engine/Private/System/Common/: InputContext.cpp  InputSystem.cpp  Time.cpp  TimerSystem.cpp
VaEngine/Engine/Private/System/Windows/: KeyInput_Windows.cpp  KeyInput_Windows.h  MouseInput_Windows.cpp  MouseInput_Windows.h
VaEngine/Engine/Private/Utilities/: BinaryLoader.h  DebuggingHelper.cpp  GlyphAtlas.cpp  GlyphAtlas.h
VaEngine/Engine/Public/: Common_Display.h  Common_RHI.h
VaEngine/Engine/Public/Animation/: AnimClip.h  AnimController.h
VaEngine/Engine/Public/Asset/: ClipAsset.h  ClipLoader.h  MeshAsset.h  MeshLoader.h  SkmAsset.h  SkmLoader.h
VaEngine/Engine/Public/Demo/: HelloCompute.h
VaEngine/Engine/Public/Geometry/: CubeMesh.h
VaEngine/Engine/Public/Interfaces/: IActivate.h  ICommandList.h  ICommandQueue.h  IExecute.h  IFence.h  IRenderDevice.h  ISwapChain.h
VaEngine/Engine/Public/Manager/: ApplicationManager.h
VaEngine/Engine/Public/Math/: Container.h  MatrixUtil.h  Viewport.h
VaEngine/Engine/Public/Mesh/: Cube.h  CubeShape.h  IMesh.h  IcoSphereShape.h  MeshData.h  MeshPrimitive.h  PrimitiveShape.h  SkinnedMesh.h  SkinnedVertex.h  UVSphereShape.h
VaEngine/Engine/Public/Object/: Skeleton.h  WorldAnimatedModel.h  WorldModel.h  WorldObject.h
VaEngine/Engine/Public/RHI/: Common_RHI.h  IBuffer.h  ICommandAlloc.h  ICommandList.h  ICommandQueue.h  IDepthBuffer.h  IFence.h  IRHIResource.h  IRenderDevice.h  IResourceView.h  ISwapChain.h  RHILoader.h
VaEngine/Engine/Public/RHI/Agent/: CubeRenderer.h
VaEngine/Engine/Public/RHI/Buffer/: IColorBuffer.h  IConstantBuffer.h  (+2 more)
VaEngine/Engine/Public/Render/: ILight.h  IMaterial.h  IRenderPass.h  IRenderer.h  RenderGraph.h  RenderGraphh.txt
VaEngine/Engine/Public/Scene/: BaseCamera.h  RenderScene.h  RenderSceneh.txt  Transform.h
VaEngine/Engine/Public/System/: IKeyInput.h  IPointerInput.h  ITime.h  InputContext.h  InputSystem.h  TimerSystem.h
VaEngine/Engine/Public/Utilities/: DebuggingHelper.h  Formats.h  Helpers.h  Locator.h  Singleton.h
VaEngine/Engine/Shaders/Vulkan/: mesh.frag  mesh.vert
VaEngine/Engine/_Shaders/Common/: Global.hlsli  Lighting.hlsli  Sampler.hlsli
VaEngine/Engine/_Shaders/DirectX/: AnimationDemo.hlsl  Blit.hlsl  BonePaletteCompute.hlsl  CubeShader.hlsl  DebugFontShader.hlsl  DebugLine.hlsl  DeferredLighting.hlsl  GBuffer.hlsl  GBufferSkinned.hlsl  Glyph.hlsl  HelloCompute.hlsl  Sky.hlsl
VaEngine/Tools/ImportTool/: CMakeLists.txt  ClipExporter.cpp  ClipExporter.h  Converter.cpp  Converter.h  Exporter.cpp  Exporter.h  Main.cpp  SkmExporter.cpp  SkmExporter.h
VaEngine/Tools/ShaderCompiler/: CMakeLists.txt  Main.cpp
VaEngine/_Assets/Kachujin/: Kachujin.matl  Kachujin.smesh  Salsa_Dancing.clip  Silly_Dancing.clip  Sword_And_Shield_Idle.clip  Sword_And_Shield_Run.clip  Sword_And_Shield_Slash.clip  Sword_And_Shield_Walk.clip
VaEngine/_Assets/Tower/: Tower.matl  Tower.mesh
(+88 files in other folders)
